Fix logo width on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -29,10 +29,18 @@ html {
   font-size: 16px;
   cursor: pointer;
   margin: 16px 0;
+
+  @media only screen and (max-width: 600px) {
+    width: 80%;
+  }
 }
 
 .logo {
   width: 30%;
+
+  @media only screen and (max-width: 600px) {
+    width: 100%;
+  }
 }
 
 .instagram-post {
